--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,9 @@
   .artcle_list {
     min-height: calc(100vh - 100px);
   }
+  .card_title {
+    @apply pt-2 pb-1
+  }
   .right_sidebar {
     @apply sticky right-0 top-0 flex w-[310px] flex-col overflow-y-auto border-none pl-[20px] pt-4 max-xl:hidden;
     -ms-overflow-style: none;
