--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,6 +156,9 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+  .header_links {
+    @apply transition-colors text-sm hover:text-foreground/80 text-foreground/60 cursor-pointer
+  }
 }
 
 
