--- a/public/about/static/css/style.css
+++ b/public/about/static/css/style.css
@@ -2650,4 +2650,6 @@ display: none;
     position: absolute;
     top: 13px;
   }
-
+.home-first {
+  background-image: url(./../image/banner-ChVQlsE8.jpg);
+}
